--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@tanstack/react-query": "^5.51.4",
     "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.3.6",
     "moment": "^2.30.1",
     "next": "14.2.5",
